# Figma-Telegram-Bot

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
figma_telegram_bot/: __init__.py
figma_telegram_bot/bot/: __init__.py  bot.py
figma_telegram_bot/config/: __init__.py  settings.py
figma_telegram_bot/figma_api/: __init__.py  client.py
figma_telegram_bot/utils/: __init__.py  comment_tracker.py  subscription_manager.py  version_tracker.py
